# razerctl

./: Cargo.toml  LICENSE  README.md
examples/: basic_mouse_move.rs  keyboard_test.rs  left_click.rs  mouse_click.rs  mouse_move1.rs  mouse_move2.rs
src/: key_translation.rs  lib.rs  nt.rs  types.rs  utils.rs
