[package]
name = "razerctl"
version = "0.1.1"
edition = "2021"
authors = ["BlankyWacky"]
description = "Allows you to control your mouse with Razer Synapse"
license = "MIT"
repository = "https://github.com/BlankyWacky/razerctl"
homepage = "https://github.com/BlankyWacky/razerctl"
readme = "README.md"
keywords = ["razer", "synapse", "mouse", "api", "windows"]
categories = ["hardware-support", "memory-management", "api-bindings"]
rust-version = "1.56"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_SystemServices",
] }