[package]
name = "razerctl"
authors = ["BlankyWacky"]
version = "0.3.2"
edition = "2021"
description = "Allows you to control your mouse with Razer Synapse"
repository = "https://github.com/BlankyWacky/razerctl"
homepage = "https://docs.rs/crate/razerctl/latest"
readme = "README.md"
keywords = ["razer", "synapse", "mouse", "api", "windows"]
categories = ["hardware-support", "memory-management", "api-bindings"]
rust-version = "1.56.0"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = [
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_SystemServices",
] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]