[package]
name = "razerctl"
authors = ["BlankyWacky"]
version = "0.3.4"
edition = "2021"
description = "Allows you to control your mouse and keyboard with Razer Synapse"
repository = "https://github.com/BlankyWacky/razerctl"
homepage = "https://docs.rs/crate/razerctl/latest"
readme = "README.md"
keywords = ["razer", "synapse", "mouse", "keyboard", "api", "windows"]
categories = ["hardware-support", "memory-management", "api-bindings"]
rust-version = "1.56.0"
license = "MIT"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_SystemServices",
] }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]